# self-optimizing-agent

./: .gitignore  README.md  databricks.yml  pyproject.toml
agents/: customer_support_agent.py  sample_agent.py
app/: app.py  app.yaml  requirements.txt
app/pages/: align_judges.py  evaluate.py  ground_truth.py  monitoring.py  observe_traces.py  optimize_prompts.py
config/: customer_support.yaml
harness/: __init__.py  eval_config.py  eval_runner.py  judge_alignment.py  labeling.py  monitoring.py  optimizer.py  prompt_registry.py  scorer_registry.py  trace_observer.py
notebooks/: 00_setup.py  01_quickstart.py  02_judge_alignment.py  03_prompt_optimization.py  04_monitoring_setup.py
